# RobotHybridFramework

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: browsers.yaml
config/environments/: dev.yaml  prod.yaml  staging.yaml
docker/: Dockerfile  docker-compose.yml
libraries/: APIClient.py  BrowserFactory.py  CdpConnector.py  ConfigManager.py  CustomListener.py  DataProvider.py  SelfHealingPlugin.py  Utils.py  __init__.py
resources/common/: common_keywords.resource  imports.resource
resources/pages/: base_page.resource  home_page.resource  login_page.resource
scripts/: dry_run.sh  generate_report.sh  run_tests.sh
testdata/: api_users.csv  login_data.csv  users.json
tests/: __init__.robot
tests/api/: data_driven_api.robot  users_api_tests.robot
tests/cdp/: cdp_app_demo.robot
tests/ui/: data_driven_login.robot  home_tests.robot  login_tests.robot  self_healing_login.robot
tests/unit/: test_cdp_connector.py  test_self_healing_llm.py  test_self_healing_scorer.py
